[package]
name = "la_node_graph"
version = "0.1.0"
edition = "2021"
authors = ["vker"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21" }
tracing-subscriber = "0.3.16"
smallvec = "1.10.0"
slotmap = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }