[package]
name = "lofty_ambition"
version = "0.1.0"
edition = "2021"
authors = ["vker"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21" }
tracing = { version = "0.1.37" }
tracing-subscriber = "0.3.16"
slotmap = { version = "1.0", features = ["serde"] }
la_node_graph = { path = "../la_node_graph" }